test_scripts/errors/fn_too_many_args0.shm
fn test() {
    print("test");
}

test(1, 2, 3, 4);
